Заменена модель игрока, добавлено управление, изменён вид камеры, фключена физика и многое другое

--- a/public/my_test_dev.html
+++ b/public/my_test_dev.html
@@ -98,8 +98,18 @@
 <script type="text/javascript" src="/my_test/src/libs\md5.js"></script>
 <script type="text/javascript" src="/my_test/src/addons\ns_compat.js"></script>
 
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+<script type="text/javascript" src="/js/my_function.js"></script> 
+
+<script type="text/javascript" src="/my_test/apps_dev/my_test/my_function.js"></script>
+<script type="text/javascript" src="/my_test/apps_dev/my_test/my_socket.js"></script>
+
+<script type="text/javascript" src="/my_test/apps_dev/my_test/my_interface.js"></script>
+<!--script type="text/javascript" src="/my_test/apps_dev/my_test/my_obj_controls.js"></script-->
+<script type="text/javascript" src="/my_test/apps_dev/my_test/my_character_controls.js"></script>
 <script type="text/javascript" src="/my_test/apps_dev/my_test/my_test.js"></script>
-<script type="text/javascript" src="/socket.io/socket.io.js"></script> 
+
+
 
 </head>
 
